Fixed XML not showing individual term fields
git-svn-id: http://svn.scratchpads.eu/svn/scratchpads/trunk@2822 ccd0800f-5989-4abc-b5cb-522e550fd16a

--- a/modules/publication/css/publication.css
+++ b/modules/publication/css/publication.css
@@ -95,6 +95,10 @@
   display: none!important;
 }
 
+.view-publication-display, .publication-field{
+  clear: both;
+}
+
 div.view-publication-display ul li{
   padding-left: 0; 
   background: none;
@@ -105,6 +109,9 @@ div.view-publication-display ul li{
 /* Node references add more buttons */
 .content-add-more{
   text-align: right;
+  margin-bottom: 15px;
+  float: right;
+  width: 550px;
 }
 
 .content-add-more .noderelationships-nodereference-multi-button{
@@ -204,6 +211,9 @@ div.view-publication-display ul li{
 
 /* METADATA */
 
+#field-publication-authors-items .description{
+  float: left;
+}
 
 /* TAXA */
 
@@ -235,10 +245,11 @@ div#publication-images div.publication-image{
   padding: 3px;
   float: left;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 div#publication-images div.publication-image:hover{
-  border-color: red;
+  border-color: #c2e1ef;
 }
 
 div#publication-images div.has-caption a{
